--- a/.github/workflows/shared-publish-release.yml
+++ b/.github/workflows/shared-publish-release.yml
@@ -12,5 +12,5 @@ jobs:
 
       - name: Create GitHub release from tag commit message
         uses: eloquent/github-release-action@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
